# mini-moodle

./: dev-compose.yaml  justfile
mini-moodle-backend/: Cargo.toml
mini-moodle-backend/src/: config.rs  constants.rs  domain.rs  main.rs  state.rs
mini-moodle-backend/src/dto/: auth.rs  envelope.rs  learning.rs  mod.rs
mini-moodle-backend/src/rest/: auth.rs  hello.rs  helpers.rs  learning.rs  mod.rs  profile.rs
mini-moodle-frontend/: index.html  package-lock.json  package.json  vite.config.ts
mini-moodle-frontend/src/: App.tsx  main.tsx
mini-moodle-frontend/src/api/: auth.ts  client.ts  learning.ts
mini-moodle-frontend/src/lib/: assignmentStatus.ts
mini-moodle-frontend/src/mock/: assignments.ts  courses.ts  users.ts
mini-moodle-frontend/src/pages/: AssignmentPage.tsx  CoursePage.tsx  DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  ProgressPage.tsx  RegisterPage.tsx
mini-moodle-frontend/src/router/: RootLayout.tsx  router.tsx
mini-moodle-frontend/src/store/: assignmentSlice.ts  assignmentsSlice.ts  courseSlice.ts  coursesSlice.ts  dashboardSlice.ts  hooks.ts  index.ts  learningFlows.ts  profileSlice.ts  progressSlice.ts  resourceStatus.ts  selectors.ts  settingsSlice.ts  thunks.ts  userSlice.ts
mini-moodle-frontend/src/types/: assignment.ts  course.ts  user.ts
mini-moodle-frontend/tests/: learningFlows.test.ts  learningState.test.ts
openspec/changes/complete-mini-moodle-task-1/: design.md  tasks.md
openspec/changes/rework-global-auth-wrapper-session-routing/: design.md  proposal.md  tasks.md
(+39 files in other folders)
