[package]
name = "mini-moodle-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
bon = "3.9.0"
bytes = "1.11.1"
chrono = "0.4.44"
directories = "6.0.0"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.32"
futures-util = "0.3.32"
itertools = "0.14.0"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socketioxide = { version = "0.18.2", features = ["tracing"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.6.8", features = ["trace", "fs", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "std"] }
uuid = { version = "1.22.0", features = ["v4", "v7", "serde"] }
